# xv6-2020-fall-lab

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile
.run/: debug.run.xml
kernel/: defs.h  exec.c  kalloc.c  proc.c  proc.h  riscv.h  swtch.S  syscall.c  sysinfo.h  sysproc.c  vm.c
user/: find.c  pingpong.c  primes.c  sleep.c  sysinfotest.c  user.h  xargs.c
