cmake_minimum_required(VERSION 3.20)
project(xv6_labs_2020)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(kernel)
include_directories(mkfs)
include_directories(user)

add_executable(xv6_labs_2020
        kernel/bio.c
        kernel/buf.h
        kernel/console.c
        kernel/date.h
        kernel/defs.h
        kernel/elf.h
        kernel/entry.S
        kernel/exec.c
        kernel/fcntl.h
        kernel/file.c
        kernel/file.h
        kernel/fs.c
        kernel/fs.h
        kernel/kalloc.c
        kernel/kernel.ld
        kernel/kernelvec.S
        kernel/log.c
        kernel/main.c
        kernel/memlayout.h
        kernel/param.h
        kernel/pipe.c
        kernel/plic.c
        kernel/printf.c
        kernel/proc.c
        kernel/proc.h
        kernel/ramdisk.c
        kernel/riscv.h
        kernel/sleeplock.c
        kernel/sleeplock.h
        kernel/spinlock.c
        kernel/spinlock.h
        kernel/sprintf.c
        kernel/start.c
        kernel/stat.h
        kernel/stats.c
        kernel/string.c
        kernel/swtch.S
        kernel/syscall.c
        kernel/syscall.h
        kernel/sysfile.c
        kernel/sysproc.c
        kernel/trampoline.S
        kernel/trap.c
        kernel/types.h
        kernel/uart.c
        kernel/virtio.h
        kernel/virtio_disk.c
        kernel/vm.c
        kernel/vmcopyin.c
        mkfs/mkfs.c
        user/_find
        user/_pingpong
        user/_primes
        user/_sleep
        user/_xargs
        user/cat.c
        user/echo.c
        user/forktest.c
        user/grep.c
        user/grind.c
        user/init.c
        user/initcode.S
        user/kill.c
        user/ln.c
        user/ls.c
        user/mkdir.c
        user/printf.c
        user/rm.c
        user/sh.c
        user/statistics.c
        user/stats.c
        user/stressfs.c
        user/ulib.c
        user/umalloc.c
        user/user.h
        user/usertests.c
        user/usys.pl
        user/wc.c
        user/zombie.c)
